examples/kubernetes_cluster/00_prometheus_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app: prometheus
