examples/kubernetes_cluster/03_prometheus_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: monitoring
  labels:
    role: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        role: monitoring
        app: prometheus
      annotations:
        monitoring: "true"
    spec:
      serviceAccountName: prometheus
      containers:
      - args:
        - --log.level=debug
        - --web.enable-lifecycle
        - --web.external-url=https://prometheus.easygenerator.com/
        - --config.file=/etc/prometheus/prometheus.yml
        - --web.console.libraries=/usr/share/prometheus/console_libraries
        - --web.console.templates=/usr/share/prometheus/consoles
        - --storage.tsdb.path=/data
        - --storage.tsdb.retention=10m
        name: prometheus
        image: prom/prometheus:v2.4.2
        ports:
        - containerPort: 9090
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /etc/prometheus
          name: config-main
#       volumeMounts:
#       - name: prometheus-data-volume
#         mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
        - name: config-main
          configMap:
            name: prometheus-main-config
            items:
            - key: prometheus.yml
              path: prometheus.yml
#     volumes:
#     - name: prometheus-data-volume
#       persistentVolumeClaim:
#         claimName: prometheus-data-claim
