examples/kubernetes_cluster/22_blackbox_exporter_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
  labels:
    role: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        role: monitoring
        app: blackbox-exporter
      annotations:
        monitoring: "true"
    spec:
      containers:
      - name: blackbox-exporter
        image: prom/blackbox-exporter:v0.14.0
        ports:
        - containerPort: 9115
        volumeMounts:
        - mountPath: /etc/blackbox_exporter
          name: config
      volumes:
        - name: config
          configMap:
            name: blackbox-exporter-config
            items:
            - key: config.yml
              path: config.yml
