examples/kubernetes_cluster/992_elasticsearch_exporter_service.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-exporter
  namespace: monitoring
spec:
  selector:
    app: elasticsearch-exporter
  ports:
    - protocol: TCP
      port: 9114
      targetPort: 9114
